--- a/css/namari-color.css
+++ b/css/namari-color.css
@@ -124,7 +124,7 @@ a:hover, #header.nav-solid nav a:hover {
 /* Banner Background and Text Colors */
 
 #banner {
-    background: url("../images/banner-images/banner-image2.jpg") no-repeat center top;
+    background: url("../images/banner-images/banner-image2.webp") no-repeat center top;
     background-size:cover;
 }
 
